--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Halo</title>
     <link rel="stylesheet" href="https://halo-globals.vercel.app/style.css" />
     <link rel="stylesheet" href="./overrides.css" />
+    <script
+      src="https://cdn.usefathom.com/script.js"
+      data-site="MFXZDAPO"
+      defer
+    ></script>
   </head>
   <body>
     <div id="application"></div>
